--- a/mtg.css
+++ b/mtg.css
@@ -1,15 +1,98 @@
+:root {
+	--golden0: 0.618;
+	--golden1: 1.618;
+	--padding: calc(var(--golden0) * 0.5rem);
+}
+
+.card_tag_item {
+	box-sizing: border-box;
+	display: inline-block;
+	background-color: lightgray;
+	border-radius: var(--padding);
+	padding: 0.5px;
+}
+
+.card_tag_inner {
+	box-sizing: border-box;
+	display: inline-block;
+
+	padding: var(--padding);
+	border-radius: var(--padding);
+
+	font-weight: bold;
+}
+
+.card_tag_unset {
+	background-color: silver;
+	color: rgb(122, 122, 122);
+}
+
+.card_tag_in {
+	background-color: limegreen;
+	color: white;
+}
+
+.card_tag_in_implicit {
+	background-color: lightgreen;
+	color: white;
+}
+
+.card_tag_out {
+	background-color: red;
+	color: white;
+}
+
+.card_tag_out_implicit {
+	background-color: coral;
+	color: white;
+}
+
+.transparent_box {
+	position: fixed;
+	bottom: 0;
+	right: 0;
+	transition: opacity 1s;
+	opacity: .0;
+}
+
+.transparent_box:hover {
+	opacity: 1.0;
+}
+
+.visible {
+	opacity: 1.0;
+}
+
 img.preview {
-	display: block;
+	/* display: block;
 	width: 100%;
 	max-width: 100%;
-	height: auto;
-	/* object-fit: contain; */
-	/* box-sizing: border-box; */
+	height: auto; */
+	object-fit: contain;
+	box-sizing: border-box;
+}
+
+.image_inactive {
+	--distance: 2%;
+	--color-one: grey;
+	--color-two: lightgrey;
+	background: repeating-linear-gradient(45deg,
+		var(--color-one),
+		var(--color-one) var(--distance),
+		var(--color-two) var(--distance),
+		var(--color-two) calc(var(--distance) * 2)
+	);
+	border: 2px solid black;
+	border-radius: 10%;
+	/* --image-width: 20vw; */
+	/* width: var(--image-width);
+	height: calc(var(--image-width) * 7 / 5); */
 }
 
 .images_grid {
 	display: grid;
-	grid-template-columns: auto auto auto;
+	grid-template-columns: repeat(5, 20%);
+	/* grid-template-rows: repeat(auto-fit, 100px); */
 	/* justify-content: space-evenly; */
 }
 
@@ -21,11 +104,24 @@ img.preview {
 	grid-template-columns: 62% 38%;
 }
 
-.images_column {
-}
-
 .top_sticky {
 	position: -webkit-sticky;
 	position: sticky;
 	top: 0;
+}
+
+.aspect-ratio-box {
+	width: 100%;
+	height: 0;
+	overflow: hidden;
+	padding-top: calc(100% * 348 / 249);
+	position: relative;
+}
+
+.aspect-ratio-box-inside {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
 }
